# ACstalks

./: .gitignore  ACStalks.cabal  README.md  stack.yaml
app/: Main.hs
frontend/: .gitignore  .rules.html.swp  `  admin.html  build.sh  default.nix  faq.html  gemset.nix  profile.md  refresh-dependencies.sh  rules.html  start.sh  toc.html  ua.md  watch.sh
frontend/_includes/: ACVillagerListFinal.html  FavThingToDoListFinal.html  NativeFruit.html  markdown_guide.html  pricelist.html
frontend/_layouts/: .home.html.swp  default.html  home.html  profile.html  register.html  settings.html  text.html
frontend/_site/: faq.html  gemset.nix  index.html  profile.html  register.html  rules.html  settings.html  toc.html  ua.html
frontend/_site/assets/: PRIVACY_NOTICE.docx
frontend/_site/assets/css/: default.css  dialog.css  pricelist.css
frontend/_site/assets/js/: settings.js
frontend/_site/myblog/: 404.html
frontend/assets/: .~lock.PRIVACY_NOTICE.docx#
frontend/assets/css/: default.css  pricelist.css
frontend/assets/js/: all.js  library.js  main.js  profile.js  register.js  settings.js
frontend/myblog/_posts/: 2020-03-31-welcome-to-jekyll.markdown
src/ACStalks/: API.hs  Captcha.hs  Database.hs  Schema.hs
src/ACStalks/API/: RouteAdmin.hs  RouteHotItem.hs  RouteMarket.hs  RouteUser.hs
src/ACStalks/Database/: Connect.hs  DatabaseConnection.hs  SqlSettings.hs  Transactions.hs
src/ACStalks/Database/Transactions/: HotItem.hs  Price.hs  Token.hs  User.hs  Utils.hs
src/ACStalks/Schema/: HotItem.hs  Price.hs  Token.hs  User.hs  Utils.hs
utils/: migrate.sql  newdb.sh
