name:                ACStalks
version:             1.0.0
synopsis:            Turnip price and hot items exchange for AC:NH.
-- description:
homepage:            https://acstalks.com
-- license:             
-- license-file:        LICENSE
author:              Andy Chun (@noneucat) 
maintainer:          andy@lolc.at 
copyright:           2020 Sang Hak Chun
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wno-missing-fields
  exposed-modules:     ACStalks.API  
                     , ACStalks.Captcha
                     , ACStalks.Database
                     , ACStalks.Schema
                     , Lib
  other-modules:       ACStalks.API.RouteUser
                     , ACStalks.API.RouteMarket
                     , ACStalks.API.RouteHotItem
                     , ACStalks.API.RouteAdmin
                     , ACStalks.Database.Connect
                     , ACStalks.Database.DatabaseConnection
                     , ACStalks.Database.SqlSettings
                     , ACStalks.Database.Transactions
                     , ACStalks.Database.Transactions.HotItem
                     , ACStalks.Database.Transactions.Price
                     , ACStalks.Database.Transactions.Token
                     , ACStalks.Database.Transactions.User
                     , ACStalks.Database.Transactions.Utils
                     , ACStalks.Schema.HotItem
                     , ACStalks.Schema.Price
                     , ACStalks.Schema.Token
                     , ACStalks.Schema.User
                     , ACStalks.Schema.Utils
  default-extensions:  DataKinds
                     , DeriveGeneric
                     , TemplateHaskell
                     , TypeOperators 
                     , QuasiQuotes
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , aeson
                     , bcrypt
                     , datetime == 0.3.1
                     , HDBC
                     , HDBC-postgresql
                     , HDBC-sqlite3
                     , req
                     , scientific
                     , servant-server
                     , string-interpolate
                     , text
                     , time
                     , uuid
                     , wai
                     , wai-app-static
                     , warp
  default-language:    Haskell2010

executable ACStalks-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wno-missing-fields -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ACStalks
                     , time
  default-language:    Haskell2010

test-suite ACStalks-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ACStalks
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
   type:     git
   location: gitea@gitea.lolc.at:ACstalks/acstalks.git
